Whitespace fix

--- a/hello.css
+++ b/hello.css
@@ -33,7 +33,7 @@ header p:nth-child(2) {
 main {
   background-color: white;
   color: black;
-  padding: 2rem 0 4rem;
+  padding: 2rem 0 1.5rem;
 }
 
 h1 {
